<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.juanes.doradalturistico1.LoginActivity"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textColor="@color/red"
            android:textSize="40dp"
            android:gravity="center"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/rioclaro"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/usuario"
            android:textColor="@color/green"
            android:gravity="center"
            android:id="@+id/eUsuario"
            android:layout_marginBottom="2dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColor="@color/green"
            android:gravity="center"
            android:id="@+id/eContrasena"
            android:textAlignment="center"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ingresar"
            android:gravity="center"
            android:background="@color/gray"
            android:id="@+id/bIngresar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registrarse"
            android:textColor="@color/gray"
            android:gravity="center"
            android:id="@+id/tRegistrarse"/>

    </LinearLayout>