<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_registro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.juanes.doradalturistico1.RegistroActivity"
        android:orientation="vertical"
        android:background="@color/white">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="@color/red"
        android:text="@string/create_account"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rioclaro"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Rusuario"
            android:textColor="@color/red"
            android:gravity="center"
            android:id="@+id/eRUsuario"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/contra"
                android:textColor="@color/red"
                android:layout_marginTop="2sp"
                android:layout_marginBottom="2sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:id="@+id/eRPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Repeti"
                android:textColor="@color/red"
                android:gravity="center"
                android:layout_marginTop="2sp"
                android:layout_marginBottom="2sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:id="@+id/eRRepPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/correo"
                android:textColor="@color/red"
                android:gravity="center"
                android:id="@+id/eCorreo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:gravity="center"
                android:background="@color/gray"
                android:id="@+id/bCancelar"
                android:layout_marginRight="5dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Registrarse"
                android:gravity="center"
                android:background="@color/gray"
                android:id="@+id/bRegistrarse"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>


    </LinearLayout>